--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   http: ^1.2.2
   equatable: ^2.0.7
   youtube_player_flutter: ^8.0.0
-  webview_flutter: ^4.0.0
+  video_player: ^2.9.2
   provider: ^6.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
